--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <div class="hero-container" data-aos="zoom-in" data-aos-delay="100">
         <h1>Welcome to Gorebal Camp Official Page</h1>
         <h2>
-          We are team of youngsters to upadte latest happening in our village
+          We are team of youngsters to update latest happening in our village
         </h2>
         <a href="#about" class="btn-get-started">Get Started</a>
       </div>
